@@ -2,7 +2,7 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">11B26</string>
+		<string key="IBDocument.SystemVersion">11A511</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1617</string>
 		<string key="IBDocument.AppKitVersion">1138</string>
 		<string key="IBDocument.HIToolboxVersion">566.00</string>
@@ -477,7 +477,7 @@ c2UgUmVwcm9iZSBmcm9tIHRoZSBtZW51IHRvIHJldHJ5LiAKClN0YXkgc2FmZSBvdXQgdGhlcmUhA</s
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="497183513">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -486,7 +486,6 @@ c2UgUmVwcm9iZSBmcm9tIHRoZSBtZW51IHRvIHJldHJ5LiAKClN0YXkgc2FmZSBvdXQgdGhlcmUhA</s
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 49}, {446, 68}}</string>
 							<reference key="NSSuperview" ref="497183513"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="517630719"/>
 							<string key="NSReuseIdentifierKey">_NS:3596</string>
 							<bool key="NSEnabled">YES</bool>
@@ -512,8 +511,6 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{352, 2}, {92, 32}}</string>
 							<reference key="NSSuperview" ref="497183513"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:161</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="871058922">
@@ -536,7 +533,6 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{260, 2}, {92, 32}}</string>
 							<reference key="NSSuperview" ref="497183513"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="588937291"/>
 							<string key="NSReuseIdentifierKey">_NS:161</string>
 							<bool key="NSEnabled">YES</bool>
@@ -557,14 +553,105 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 						</object>
 					</object>
 					<string key="NSFrameSize">{480, 137}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="825907952"/>
 					<string key="NSReuseIdentifierKey">_NS:2818</string>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
+			</object>
+			<object class="NSWindowTemplate" id="470155321">
+				<int key="NSWindowStyleMask">15</int>
+				<int key="NSWindowBacking">2</int>
+				<string key="NSWindowRect">{{250, 134}, {490, 185}}</string>
+				<int key="NSWTFlags">1685585920</int>
+				<string key="NSWindowTitle">No Web Access</string>
+				<string key="NSWindowClass">NSWindow</string>
+				<nil key="NSViewClass"/>
+				<nil key="NSUserInterfaceItemIdentifier"/>
+				<object class="NSView" key="NSWindowView" id="793822988">
+					<reference key="NSNextResponder"/>
+					<int key="NSvFlags">256</int>
+					<object class="NSMutableArray" key="NSSubviews">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSTextField" id="310583500">
+							<reference key="NSNextResponder" ref="793822988"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{17, 48}, {456, 117}}</string>
+							<reference key="NSSuperview" ref="793822988"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="16728419"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="285321105">
+								<int key="NSCellFlags">67239424</int>
+								<int key="NSCellFlags2">1077940224</int>
+								<string type="base64-UTF8" key="NSContents">VGhlcmUgaXMgbm8gd2ViIGFjY2VzcyBvbiB0aGlzIG5ldHdvcmsuIERvIHlvdSBoYXZlIHRvIGxvZ2lu
+IGZvciB0aGF0PwoKV2hpbGUgeW91IGxvZ2luIHlvdSBhcmUgaW5zZWN1cmUsIGZvciBiYWNrd2FyZHMg
+Y29tcGF0aWJpbGl0eSwgdW50aWwgZG5zc2VjLXRyaWdnZXIgY2FuIGRldGVjdCB3ZWIgYWNjZXNzLgoK
+U2tpcCB0aGlzIGlmIHlvdSBkbyBub3QgaGF2ZSB0byBsb2cgaW4gb24gdGhpcyBuZXR3b3JrLg</string>
+								<reference key="NSSupport" ref="710950440"/>
+								<reference key="NSControlView" ref="310583500"/>
+								<bool key="NSDrawsBackground">YES</bool>
+								<reference key="NSBackgroundColor" ref="336978319"/>
+								<reference key="NSTextColor" ref="1066043887"/>
+							</object>
+						</object>
+						<object class="NSButton" id="16728419">
+							<reference key="NSNextResponder" ref="793822988"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{246, 12}, {96, 32}}</string>
+							<reference key="NSSuperview" ref="793822988"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="489904344"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSButtonCell" key="NSCell" id="998076419">
+								<int key="NSCellFlags">67239424</int>
+								<int key="NSCellFlags2">134217728</int>
+								<string key="NSContents">Skip</string>
+								<reference key="NSSupport" ref="710950440"/>
+								<reference key="NSControlView" ref="16728419"/>
+								<int key="NSButtonFlags">-2038284033</int>
+								<int key="NSButtonFlags2">129</int>
+								<string key="NSAlternateContents"/>
+								<string key="NSKeyEquivalent"/>
+								<int key="NSPeriodicDelay">200</int>
+								<int key="NSPeriodicInterval">25</int>
+							</object>
+						</object>
+						<object class="NSButton" id="489904344">
+							<reference key="NSNextResponder" ref="793822988"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{356, 12}, {96, 32}}</string>
+							<reference key="NSSuperview" ref="793822988"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSButtonCell" key="NSCell" id="463653728">
+								<int key="NSCellFlags">67239424</int>
+								<int key="NSCellFlags2">134217728</int>
+								<string key="NSContents">Log in</string>
+								<reference key="NSSupport" ref="710950440"/>
+								<reference key="NSControlView" ref="489904344"/>
+								<int key="NSButtonFlags">-2038284033</int>
+								<int key="NSButtonFlags2">129</int>
+								<string key="NSAlternateContents"/>
+								<string key="NSKeyEquivalent"/>
+								<int key="NSPeriodicDelay">200</int>
+								<int key="NSPeriodicInterval">25</int>
+							</object>
+						</object>
+					</object>
+					<string key="NSFrameSize">{490, 185}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
+					<reference key="NSNextKeyView" ref="310583500"/>
+				</object>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<bool key="NSWindowIsRestorable">YES</bool>
+			</object>
+			<object class="NSCustomObject" id="129926002">
+				<string key="NSClassName">NowebDelegate</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -705,6 +792,38 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 						<reference key="destination" ref="582349704"/>
 					</object>
 					<int key="connectionID">607</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">nowebwindow</string>
+						<reference key="source" ref="49522063"/>
+						<reference key="destination" ref="470155321"/>
+					</object>
+					<int key="connectionID">621</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">NowebLogin:</string>
+						<reference key="source" ref="49522063"/>
+						<reference key="destination" ref="489904344"/>
+					</object>
+					<int key="connectionID">622</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">NowebSkip:</string>
+						<reference key="source" ref="49522063"/>
+						<reference key="destination" ref="16728419"/>
+					</object>
+					<int key="connectionID">623</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="470155321"/>
+						<reference key="destination" ref="129926002"/>
+					</object>
+					<int key="connectionID">626</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -974,6 +1093,73 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 						<reference key="object" ref="63492099"/>
 						<reference key="parent" ref="517630719"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">608</int>
+						<reference key="object" ref="470155321"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="793822988"/>
+						</object>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">609</int>
+						<reference key="object" ref="793822988"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="310583500"/>
+							<reference ref="16728419"/>
+							<reference ref="489904344"/>
+						</object>
+						<reference key="parent" ref="470155321"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">610</int>
+						<reference key="object" ref="489904344"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="463653728"/>
+						</object>
+						<reference key="parent" ref="793822988"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">611</int>
+						<reference key="object" ref="16728419"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="998076419"/>
+						</object>
+						<reference key="parent" ref="793822988"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">612</int>
+						<reference key="object" ref="310583500"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="285321105"/>
+						</object>
+						<reference key="parent" ref="793822988"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">613</int>
+						<reference key="object" ref="285321105"/>
+						<reference key="parent" ref="310583500"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">614</int>
+						<reference key="object" ref="998076419"/>
+						<reference key="parent" ref="16728419"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">615</int>
+						<reference key="object" ref="463653728"/>
+						<reference key="parent" ref="489904344"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">625</int>
+						<reference key="object" ref="129926002"/>
+						<reference key="parent" ref="0"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1025,6 +1211,21 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 					<string>602.IBPluginDependency</string>
 					<string>603.IBPluginDependency</string>
 					<string>604.IBPluginDependency</string>
+					<string>608.IBPluginDependency</string>
+					<string>608.IBWindowTemplateEditedContentRect</string>
+					<string>608.NSWindowTemplate.visibleAtLaunch</string>
+					<string>609.IBPluginDependency</string>
+					<string>610.IBPluginDependency</string>
+					<string>611.IBPluginDependency</string>
+					<string>611.IBViewIntegration.shadowBlurRadius</string>
+					<string>611.IBViewIntegration.shadowColor</string>
+					<string>611.IBViewIntegration.shadowOffsetHeight</string>
+					<string>611.IBViewIntegration.shadowOffsetWidth</string>
+					<string>612.IBPluginDependency</string>
+					<string>613.IBPluginDependency</string>
+					<string>614.IBPluginDependency</string>
+					<string>615.IBPluginDependency</string>
+					<string>625.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1073,6 +1274,21 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>{{306, 245}, {443, 455}}</string>
+					<boolean value="NO"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<real value="0.0"/>
+					<reference ref="326140788"/>
+					<real value="0.0"/>
+					<real value="0.0"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -1087,11 +1303,19 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">607</int>
+			<int key="maxID">626</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">NowebDelegate</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NowebDelegate.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">RiggerApp</string>
 					<string key="superclassName">NSObject</string>
@@ -1102,6 +1326,8 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 							<string>HotsignCancel:</string>
 							<string>HotsignOK:</string>
 							<string>HotspotSignon:</string>
+							<string>NowebLogin:</string>
+							<string>NowebSkip:</string>
 							<string>ProbeResults:</string>
 							<string>ProbeResultsOK:</string>
 							<string>Reprobe:</string>
@@ -1110,6 +1336,8 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1127,6 +1355,8 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 							<string>HotsignCancel:</string>
 							<string>HotsignOK:</string>
 							<string>HotspotSignon:</string>
+							<string>NowebLogin:</string>
+							<string>NowebSkip:</string>
 							<string>ProbeResults:</string>
 							<string>ProbeResultsOK:</string>
 							<string>Reprobe:</string>
@@ -1145,6 +1375,14 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">HotspotSignon:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">NowebLogin:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">NowebSkip:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -1174,6 +1412,7 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>hotsignwindow</string>
+							<string>nowebwindow</string>
 							<string>resultpane</string>
 							<string>resultwindow</string>
 							<string>riggermenu</string>
@@ -1182,6 +1421,7 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSWindow</string>
 							<string>NSWindow</string>
 							<string>NSTextView</string>
 							<string>NSWindow</string>
@@ -1195,6 +1435,7 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>hotsignwindow</string>
+							<string>nowebwindow</string>
 							<string>resultpane</string>
 							<string>resultwindow</string>
 							<string>riggermenu</string>
@@ -1205,6 +1446,10 @@ YWluLgoKUGxlYXNlLCBzdGF5IHNhZmUgb3V0IHRoZXJlLg</string>
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBToOneOutletInfo">
 								<string key="name">hotsignwindow</string>
+								<string key="candidateClassName">NSWindow</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">nowebwindow</string>
 								<string key="candidateClassName">NSWindow</string>
 							</object>
 							<object class="IBToOneOutletInfo">
